[package]
name = "algo-visualizer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rob893/algo-visualizer"
description = "Lib used for pathfinding logic"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "algo_visualizer"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2.4", features = ["js"] }
